# Total-Brick-Breaker

./: -CMakeLists.txt  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  _Makefile  cmake_install.cmake  mingw-toolchain.cmake
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Game.cpp  Game.h  Level.cpp  Level.h  Sender.cpp  Sender.h  main.cpp
